# CursoOpenScience

./: .gitmodules  .readthedocs.yaml  Dockerfile  README.md  codemeta.json  mkdocs.yml  pyproject.toml  rationale.md  requirement.txt
.github/workflows/: CI.yml
docs/: README.md  pyproject.toml
host_volume/grobid_output/: exemple_pdf1.grobid.tei.xml  exemple_pdf10.grobid.tei.xml  exemple_pdf2.grobid.tei.xml  exemple_pdf5.grobid.tei.xml  exemple_pdf6.grobid.tei.xml  exemple_pdf7.grobid.tei.xml  exemple_pdf8.grobid.tei.xml
tests/: test_pdf.py  test_visualization.py
work/: script_grobit_pdf.py  script_list_link.py  script_visualization.py  script_wordcloud.py  utils.py
work/output/: exemple_pdf3.grobid.tei.xml  exemple_pdf4.grobid.tei.xml  exemple_pdf9.grobid.tei.xml
