[tool.poetry]
name = "grobid"
version = "0.1.0"
description = ""
authors = ["Tristan Hucher <tristan.hucher@etu.utc.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
matplotlib = "^3.8.3"
wordcloud = "^1.9.3"
lxml = "^5.1.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

